feat: add bools-list, book, sighnin pages and components

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,10 +18,10 @@ body {
     border-radius: 5px;
 }
 
-button {
-    border: none;
-    border-radius: 10px;
-    font-size: $fontSize;
-    outline: none;
-    padding: 5px 10px;
-}
+// button {
+//     border: none;
+//     border-radius: 10px;
+//     font-size: $fontSize;
+//     outline: none;
+//     padding: 5px 10px;
+// }
