--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,23 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans");
 * {
   box-sizing: border-box;
-  font-family: "Raleway", sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   margin: 0;
   padding: 0;
 }
 
 body {
-  background-color: #f8e9ce;
+  background-color: #C8C5BC;
   padding: 60px 50px;
 }
 
 .App {
-  background-color: #fffddc;
-  border: 8px solid #fdf7ed;
+  background-color: #F0EEE2;
+  border: 8px solid #D7D4CD;
   border-radius: 5px;
+  height: calc(100vh - 120px);
+  display: flex;
+  justify-content: space-between;
+  padding: 0;
+  flex-direction: column;
 }/*# sourceMappingURL=App.css.map */
