--- a/src/Pages/BookList/BooksList.css
+++ b/src/Pages/BookList/BooksList.css
@@ -1,7 +1,11 @@
 .books-list-wrapper {
+  padding: 20px;
+}
+
+.books-list {
   display: flex;
   justify-content: space-between;
-  padding: 20px;
+  padding: 20px 0;
   flex-wrap: wrap;
   -moz-column-gap: 10px;
        column-gap: 10px;
