--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body {
   background-color: #F0EEE2;
   border: 8px solid #D7D4CD;
   border-radius: 5px;
-  height: calc(100vh - 120px);
+  min-height: calc(100vh - 120px);
   display: flex;
   justify-content: space-between;
   padding: 0;
