--- a/src/components/BookCard/BookCard.css
+++ b/src/components/BookCard/BookCard.css
@@ -26,6 +26,7 @@
   box-shadow: -3px 5px 7px lightgray;
   margin: 20px 30px;
   width: calc(100% - 60px);
+  aspect-ratio: 3/4;
 }
 
 .book-image-wrapper {
@@ -50,6 +51,10 @@
 }
 .book-info .book-author {
   font-size: 0.9em;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 100%;
 }
 .book-info .book-price {
   font-size: 1.1em;
