--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,1 +1,58 @@
-/*# sourceMappingURL=Header.css.map */
+header {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 20px;
+  height: 70px;
+  width: 100%;
+  position: relative;
+}
+header::after {
+  content: "";
+  border-bottom: 1px solid #C8C5BC;
+  position: absolute;
+  bottom: 0;
+  width: 98%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+header .logo-wrapper {
+  align-self: center;
+  display: flex;
+}
+header .logo-wrapper .logo-text {
+  font-size: 22px;
+  font-weight: 600;
+}
+header .logo-text.author::before {
+  content: "/";
+  margin: 0 10px;
+}
+header img {
+  height: 100%;
+}
+header img.avatar {
+  border: 1px solid #0a8989;
+  padding: 3px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+header .user-panel {
+  align-items: center;
+  display: flex;
+}
+header .cart {
+  height: 100%;
+  position: relative;
+}
+header .cart.full::before {
+  content: "";
+  background-color: red;
+  border-radius: 50%;
+  display: block;
+  height: 10px;
+  position: absolute;
+  top: 2px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 10px;
+}/*# sourceMappingURL=Header.css.map */
