--- a/src/Pages/Book/Book.scss
+++ b/src/Pages/Book/Book.scss
@@ -1,21 +1,49 @@
+@import "../../variables.scss";
+
 .single-book {
     display: grid;
     grid-template-areas: "image info price"
     "description description description";
-    padding: 20px;
+    padding: 50px 100px;
+    grid-template-columns: auto 1fr 1fr;
+    grid-gap: 20px 40px;
+    // position: relative;
+    // z-index: 1;
 
     &__image {
         grid-area: image;
+        z-index: 2;
+        position: relative;
+
+        img {
+            box-shadow: -6px 6px 8px lightgray;
+        }
     }
 
     &__info {
         grid-area: info;
+
+        h2 {
+            font-size: 1.8em;
+        }
+
+        p {
+            margin-top: 10px;
+        }
     }
 
     &__price {
         grid-area: price;
+        border: 1px dotted $activeColor;
+        border-radius: 5px;
+        max-height: 250px;
+        @include settingFlexPadding(20px, space-around);
+        flex-direction: column;
+        font-weight: 600;
 
         .button-cart {
+            margin-top: 20px;
+
             .parent {
                 perspective: none;
                 position: relative;
@@ -27,9 +55,91 @@
                 }
             }
         }
+
+        &--price,
+        &--count,
+        &--total {
+            @include settingFlexPadding(0, space-between);
+            align-items: center;
+        }
+
+        &--buttons {
+            display: flex;
+            align-items: center;
+
+            input {
+                height: 30px;
+                width: 50px;
+                outline: none;
+                border: 1px solid $activeColor;
+                border-radius: 0;
+                border-left: none;
+                border-right: none;
+                text-align: center;
+                font-weight: 600;
+            }
+
+            button {
+                width: 30px;
+                height: 30px;
+                font-size: 1.6em;
+                line-height: 0;
+                color: gray;
+                outline: none;
+                cursor: pointer;
+                border: 1px solid $activeColor;
+
+                &:disabled {
+                    cursor: not-allowed;
+                }
+            }
+
+            .decrement-button {
+                border-top-left-radius: 5px;
+                border-bottom-left-radius: 5px;
+            }
+
+            .increment-button {
+                border-top-right-radius: 5px;
+                border-bottom-right-radius: 5px;
+            }
+        }
     }
 
     &__description {
         grid-area: description;
+        position: relative;
+        z-index: 1;
+        padding: 0 100px;
+
+        &::before {
+            position: absolute;
+            content: "";
+            width: 90%;
+            height: calc(100% + 100px);
+            background-color: rgba(255, 255, 255, 0.6);
+            z-index: -1;
+            top: -70px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+        &::after {
+            content: "";
+            position: absolute;
+            top: -35px;
+            width: 30%;
+            border-top: 1px solid $bgColor;
+            left: 50%;
+            transform: translateX(-50%);
+        }
     }
+
+    // &__paper-frame {
+    //     position: absolute;
+    //     background-color: rgba(255, 255, 255, 0.8);
+    //     z-index: -1;
+    //     width: 100%;
+    //     height: 100%;
+    // }
 }
