--- a/src/components/CartItem/CartItem.css
+++ b/src/components/CartItem/CartItem.css
@@ -1,8 +1,12 @@
 .cart__item {
   display: grid;
   grid-template-columns: 1fr 3fr repeat(4, 1fr);
+  grid-gap: 5px;
   align-items: center;
   width: 100%;
+}
+.cart__item--title {
+  font-weight: 600;
 }
 .cart__item--image {
   width: 60px;
