--- a/src/components/CartItem/CartItem.scss
+++ b/src/components/CartItem/CartItem.scss
@@ -3,8 +3,13 @@
 .cart__item {
     display: grid;
     grid-template-columns: 1fr 3fr repeat(4, 1fr);
+    grid-gap: 5px;
     align-items: center;
     width: 100%;
+
+    &--title {
+        font-weight: 600;
+    }
 
     &--image {
         width: 60px;
