--- a/src/components/UserPanel/UserPanel.scss
+++ b/src/components/UserPanel/UserPanel.scss
@@ -1,6 +1,9 @@
 @import "../../variables";
 
 .user-panel {
+    align-items: center;
+    display: flex;
+
     .signin {
         border: none;
         border-radius: 10px;
@@ -11,5 +14,58 @@
 
     button {
         @include buttonStyle;
+    }
+
+    img {
+        height: 100%;
+    
+        &.avatar {
+            border: 1px solid $activeColor;
+            padding: 3px;
+            border-radius: 50%;
+            margin-right: 10px;
+        }
+    }
+
+    .cart {
+        height: 100%;
+        position: relative;
+
+        &__full--number {
+            display: none;
+        }
+    
+        &.cart__full {
+            position: relative;
+
+            .cart__full--number {
+                background-color: #b10620;
+                border-radius: 50%;
+                color: #ffffff;
+                height: 20px;
+                width: 20px;
+                font-size: 10px;
+                font-weight: 600;
+                position: absolute;
+                top: 0;
+                left: 50%;
+                transform: translateX(-50%);
+                @include settingFlexPadding(0, center);
+                align-items: center;
+            }
+
+            // &::before {
+            //     content: "";
+            //     background-color: red;
+            //     border-radius: 50%;
+            //     display: block;
+            //     height: 10px;
+            //     position: absolute;
+            //     top: 2px;
+            //     left: 50%;
+            //     transform: translateX(-50%);
+            //     width: 10px;
+            // }
+        }
     }
 }
