--- a/src/Pages/SpecificBook/SpecificBook.css
+++ b/src/Pages/SpecificBook/SpecificBook.css
@@ -112,4 +112,4 @@
   border-top: 1px solid #C8C5BC;
   left: 50%;
   transform: translateX(-50%);
-}/*# sourceMappingURL=Book.css.map */
+}/*# sourceMappingURL=SpecificBook.css.map */
