--- a/src/components/BookCard/BookCard.css
+++ b/src/components/BookCard/BookCard.css
@@ -80,7 +80,7 @@
   text-decoration: none;
 }
 .book-info .book-view-button:hover {
-  background-color: #ECDF43;
+  background-color: #037878;
 }
 .book-info .book-view-button:disabled:hover {
   background-color: #0a8989;
