fix: refactoring booksList using, book image error loading

--- a/src/App.css
+++ b/src/App.css
@@ -20,4 +20,14 @@ body {
   justify-content: space-between;
   padding: 0;
   flex-direction: column;
+}
+
+a {
+  color: #000000;
+  text-decoration: none;
+  cursor: pointer;
+}
+a:hover {
+  color: #0a8989;
+  font-weight: 600;
 }/*# sourceMappingURL=App.css.map */
