--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,4 +4,7 @@ footer {
   text-align: center;
   font-size: 0.9em;
   color: #646464;
+}
+footer a {
+  color: #646464;
 }/*# sourceMappingURL=Footer.css.map */
