--- a/src/Pages/Signin/Signin.css
+++ b/src/Pages/Signin/Signin.css
@@ -47,4 +47,16 @@
 .signin-button:disabled {
   opacity: 0.6;
   cursor: default;
+}
+
+@media screen and (max-width: 320px) {
+  a, .signin-button {
+    width: 100%;
+  }
+  .userName {
+    width: 100%;
+  }
+  .signin-avatar {
+    width: 200px;
+  }
 }/*# sourceMappingURL=Signin.css.map */
