--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -7,4 +7,10 @@ footer {
 }
 footer a {
   color: #646464;
+}
+
+@media screen and (max-width: 320px) {
+  footer {
+    font-size: 0.8em;
+  }
 }/*# sourceMappingURL=Footer.css.map */
