--- a/src/components/AddToCart/AddToCart.css
+++ b/src/components/AddToCart/AddToCart.css
@@ -21,7 +21,7 @@
   justify-content: center;
   padding: 0;
   align-items: center;
-  background-color: #0a8989;
+  background-color: #0c8f97;
   width: 100%;
   height: 100%;
   transform: rotateX(95deg);
