--- a/src/components/CartItem/CartItem.css
+++ b/src/components/CartItem/CartItem.css
@@ -20,5 +20,5 @@
   width: 30px;
 }
 .cart__item--deleteButton:hover {
-  color: #0a8989;
+  color: #0c8f97;
 }/*# sourceMappingURL=CartItem.css.map */
