--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,10 +1,10 @@
 $fontSize: 16px;
 $sectionPadding: 10px 20px;
-$bgColor: #C8C5BC;
-$wrapperColor: #F0EEE2;
-$borderColor: #D7D4CD;
-$pageColor: #FDFCF7;
-$activeColor: #0a8989;
+$bgColor: #bcbfc8;
+$wrapperColor: #e2e5f0;
+$borderColor: #cdced7;
+$pageColor: #f7f7fd;
+$activeColor: #0c8f97;
 $bodyVerticalPadding: 60px;
 $heightHeader: 70px;
 $heightFooter: 25px;
