--- a/src/components/BookCard/BookCard.scss
+++ b/src/components/BookCard/BookCard.scss
@@ -18,7 +18,7 @@
         z-index: 0;
         transform: skewY(14deg);
         transform-origin: 0px 0px 0px;
-        background-color: #e5e3df;
+        background-color: #dddee3;
     }
 
     &:hover {
