--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,8 @@ body {
   border: 8px solid #cdced7;
   border-radius: 5px;
   min-height: calc(100vh - 120px);
-  display: flex;
-  justify-content: space-between;
-  padding: 0;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: 70px 1fr 25px;
 }
 
 a {
