--- a/src/Pages/BookList/BooksList.css
+++ b/src/Pages/BookList/BooksList.css
@@ -3,11 +3,15 @@
 }
 
 .books-list {
-  display: flex;
-  justify-content: space-between;
   padding: 20px 0;
-  flex-wrap: wrap;
+  display: grid;
   -moz-column-gap: 10px;
        column-gap: 10px;
   row-gap: 30px;
+  grid-template-columns: repeat(4, calc((100% - 30px) / 4));
+}
+
+.filter-panel {
+  display: flex;
+  align-self: start;
 }/*# sourceMappingURL=BooksList.css.map */
