--- a/src/Pages/Signin/Signin.css
+++ b/src/Pages/Signin/Signin.css
@@ -50,11 +50,13 @@
 }
 
 @media screen and (max-width: 320px) {
-  a,
-  .signin-button {
-    width: 100%;
-  }
+  .signin-wrapper a,
   .userName {
+    width: calc(100% - 16px);
+    justify-content: center;
+    display: flex;
+  }
+  .signin-button {
     width: 100%;
   }
   .signin-avatar {
