--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -12,8 +12,8 @@ footer {
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 470px) {
     footer {
-        font-size: 0.8em;
+        height: 40px;
     }
 }
