--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,7 @@ header {
   height: 70px;
   width: 100%;
   position: relative;
+  align-items: center;
 }
 header::after {
   content: "";
@@ -16,12 +17,8 @@ header::after {
   transform: translateX(-50%);
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 420px) {
   header {
     padding: 10px;
-    justify-content: center;
-  }
-  header .logo-wrapper .logo-text {
-    font-size: 1em;
   }
 }/*# sourceMappingURL=Header.css.map */
