--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -1,7 +1,6 @@
 .logo-image {
     height: 100%;
     padding: 7px;
-    transform: rotate(-30deg);
     margin-right: 10px;
 }
 
@@ -14,6 +13,11 @@
     .logo-text {
         font-size: 22px;
         font-weight: 600;
+
+        &.wrapper {
+            display: flex;
+            align-items: center;
+        }
     }
 }
 
@@ -21,5 +25,31 @@
     &::before {
         content: "/";
         margin: 0 10px;
+    }
+}
+
+@media screen and (max-width: 630px) {
+    .logo-wrapper {
+        .logo-text {
+            font-size: 1.1em;
+            &.wrapper {
+                flex-direction: column;
+                justify-self: center;
+            }
+
+            &.author {
+                &::before {
+                    content: "";
+                    margin: 0;
+                }
+            }
+        }
+    }
+}
+
+
+@media screen and (max-width: 420px) {
+    .logo-wrapper .logo-text {
+        font-size: 1em;
     }
 }
