--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,8 @@ body {
     border-radius: 5px;
     min-height: calc(100vh - 2*$bodyVerticalPadding);
     display: grid;
-    grid-template-rows: 70px 1fr 25px;
+    grid-template-rows: 70px 1fr auto;
+    overflow: hidden;
 }
 
 a {
@@ -33,13 +34,12 @@ a {
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 370px) {
     body {
         padding: 0;
     }
 
     .App {
         min-height: 100vh;
-        padding: 0 8px;
     }
 }
