--- a/src/Pages/Cart/Cart.css
+++ b/src/Pages/Cart/Cart.css
@@ -28,9 +28,16 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  margin-top: 20px;
 }
 
 .cart__total {
   align-self: end;
   font-weight: 600;
+}
+
+@media screen and (max-width: 1000px) {
+  .cart__wrapper {
+    padding: 50px 30px;
+  }
 }/*# sourceMappingURL=Cart.css.map */
