--- a/src/Pages/Cart/Cart.scss
+++ b/src/Pages/Cart/Cart.scss
@@ -16,9 +16,16 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    margin-top: 20px;
 }
 
 .cart__total {
     align-self: end;
     font-weight: 600;
+}
+
+@media screen and (max-width: 1000px){
+    .cart__wrapper {
+        padding: 50px 30px;
+    }
 }
