--- a/src/Pages/SpecificBook/SpecificBook.scss
+++ b/src/Pages/SpecificBook/SpecificBook.scss
@@ -7,8 +7,6 @@
     padding: 50px 100px;
     grid-template-columns: auto 1fr 1fr;
     grid-gap: 20px 40px;
-    // position: relative;
-    // z-index: 1;
 
     &__image {
         grid-area: image;
@@ -40,6 +38,7 @@
         @include settingFlexPadding(20px, space-around);
         flex-direction: column;
         font-weight: 600;
+        z-index: 2;
 
         .button-cart {
             margin-top: 20px;
@@ -69,7 +68,7 @@
 
             input {
                 height: 30px;
-                width: 50px;
+                width: 40px;
                 outline: none;
                 border: 1px solid $activeColor;
                 border-radius: 0;
@@ -134,12 +133,67 @@
             transform: translateX(-50%);
         }
     }
+}
 
-    // &__paper-frame {
-    //     position: absolute;
-    //     background-color: rgba(255, 255, 255, 0.8);
-    //     z-index: -1;
-    //     width: 100%;
-    //     height: 100%;
-    // }
+@media screen and (max-width: 1040px) {
+    .single-book {
+        grid-template-areas:
+            "image info"
+            "image price"
+            "description description";
+            grid-template-columns: auto 1fr;
+
+            &__description {
+                padding: 0 50px;
+                padding-top: 55px;
+
+                &::before {
+                    height: calc(100% + 35px);
+                    top: 0;
+                    width: 100%;
+                }
+
+                &::after {
+                    top: 33px;
+                }
+            }
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .single-book {
+        padding: 50px 30px;
+        grid-template-areas:
+            "image"
+            "info"
+            "price"
+            "description";
+            grid-template-columns: auto;
+            justify-items: center;
+
+        &__image {
+            margin: 0 auto;
+        }
+
+        &__price {
+            width: 350px;
+        }
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .single-book {
+        &__price {
+            width: 100%;
+        }
+
+        &__description {
+            padding: 0 15px;
+            padding-top: 55px;
+        }
+
+        &__image img{
+            width: 100%;
+        }
+    }
 }
