--- a/src/components/CartItem/CartItem.css
+++ b/src/components/CartItem/CartItem.css
@@ -1,6 +1,6 @@
 .cart__item {
   display: grid;
-  grid-template-columns: 1fr 3fr repeat(4, 1fr);
+  grid-template-columns: 1fr 3fr repeat(3, 1fr) 0.5fr;
   grid-gap: 5px;
   align-items: center;
   width: 100%;
@@ -18,6 +18,7 @@
   cursor: pointer;
   font-size: 18px;
   width: 30px;
+  justify-self: end;
 }
 .cart__item--deleteButton:hover {
   color: #0c8f97;
