--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -9,8 +9,8 @@ footer a {
   color: #646464;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 470px) {
   footer {
-    font-size: 0.8em;
+    height: 40px;
   }
 }/*# sourceMappingURL=Footer.css.map */
