--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,6 +5,7 @@ header {
     height: 70px;
     width: 100%;
     position: relative;
+    align-items: center;
 
     &::after {
         content: "";
@@ -17,13 +18,8 @@ header {
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 420px) {
     header {
         padding: 10px;
-        justify-content: center;
-
-        .logo-wrapper .logo-text {
-            font-size: 1em;
-        }
     }
 }
