--- a/src/components/SearchBook/SearchBook.scss
+++ b/src/components/SearchBook/SearchBook.scss
@@ -15,6 +15,10 @@
         border-color: $activeColor;
         box-shadow: 0 0 0 .25rem rgb(12 143 151 / 40%);
     }
+
+    &:hover .search-button {
+        color: $activeColor;
+    }
 }
 
 .search-input {
